@@ -41,6 +41,7 @@ features:
 - added propagation method to cons_xor relying on Gaussian elimination, which can also produce feasible solutions
 - new branching rule "cloud branching" that considers several alternative LP optima
 - additional vbc output added: branching information is printed earlier and also for nodes which were cut off
+- added new statistic which distinguish between internal nodes and leaves which got processed
 
 performance improvements:
 - conflict consisting of exactly two binary variables will be handled as set-packing constraint instead of an logicor
